fix(ui): DOMA-5232 Change space item align

--- a/packages/ui/src/components/Space/style.less
+++ b/packages/ui/src/components/Space/style.less
@@ -1,1 +1,5 @@
 @import "antd/lib/space/style/index.less";
+
+.condo-space-item {
+  display: flex;
+}
